[package]
name = "casteel_creek"
version = "0.1.0"
edition = "2021"
authors = ["Chase C <casteel_creek@chase.slmail.me>"]
license = "GPL-2.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["blocking"] }

lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.10.2"
