[package]
name = "casteel_creek"
version = "0.1.0"
edition = "2024"
authors = ["Chase C <casteel_creek@chase.slmail.me>"]
license = "GPL-2.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }

lazy_static = "1.5"
rand = "0.9"
regex = "1.11"
