[package]
name = "casteel_creek"
version = "0.1.0"
edition = "2024"
authors = ["Chase C <casteel_creek@chase.slmail.me>"]
license = "GPL-2.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.46", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }

serde_json = "1.0.141"
anyhow = "1.0"
once_cell = "1.21"
regex = "1.11"
